# lorenz63-sgm

./: .gitattributes  .gitignore  LICENSE  README.md  environment.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
data/: lorenz_stats.json  make_anim.py  make_data.py  sphere_stats.json
demo_outputs/: events.out.tfevents.1750775466.MSI  events.out.tfevents.1750779955.MSI  pc_samples.npz  training_log.csv
demo_outputs/ckpts/: e01.pt  e02.pt  e03.pt  e04.pt  e05.pt  e06.pt  e07.pt  e08.pt  e09.pt  e10.pt  e11.pt  e12.pt  e13.pt  e14.pt  e15.pt  e16.pt  e17.pt  e18.pt  e19.pt  e20.pt  e21.pt  e22.pt  e23.pt  e24.pt  e25.pt
demo_outputs/marginal_eval/: metrics.csv
examples/: minimal_demo.ipynb
models/: ema.py  mlp.py
outputs/: em_lorenz_samples.npz  pc_lorenz_samples.npz  training_log.csv
outputs/animations/: em_lorenz_samples.html  pc_lorenz_samples.html
outputs/ckpts/: e01.pt  e02.pt  e03.pt  e04.pt  e05.pt  e06.pt  e07.pt  e08.pt  e09.pt  e10.pt  e11.pt  e12.pt  e13.pt  e14.pt  e15.pt  e16.pt  e17.pt  e18.pt  e19.pt  e20.pt  e21.pt  e22.pt  e23.pt  e24.pt  e25.pt  e26.pt  e27.pt  e28.pt  e29.pt  e30.pt  e31.pt  e32.pt  e33.pt  e34.pt  e35.pt  e36.pt  e37.pt  e38.pt  e39.pt  e40.pt  (+10 more)
outputs/marginals/: metrics.csv
sampling/: em.py  ode.py  pc.py
scripts/: eval_marginals.py  plot_samples.py  sample.py  train.py
training/: losses.py  schedule.py
utils/: logger.py  preprocess.py
