[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "lorenzscore"
version         = "0.1.0"
description     = "Score-based generative modeling for the Lorenz-63 system"
readme          = "README.md"
license         = { file = "LICENSE" }
authors         = [
  { name = "Sebastian Deery", email = "sbdeery@uchicago.edu" }
]
requires-python = ">=3.10"
dependencies   = [
  "torch==2.2.0",
  "numpy==1.27.*",
  "scipy==1.13.*",
  "matplotlib==3.7.*",
  "tqdm==4.66.*",
  "torchdiffeq==0.3.*",
]

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "flake8",
  "mypy",
  "pytest",
  "pytest-cov",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"